Marketing update leading up to mainnet

--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
             background: #032a3b;
         }
 
+        section.feature .table-feature {
+            background: #005C85;
+        }
+
         .footer-links {
             float: right;
         }
@@ -273,9 +277,9 @@
                                 <dt>Ticker</dt>
                                 <dd>SAFE</dd>
                                 <dt>Fees</dt>
-                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>3.0%</a></dd>
+                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>2.8%</a></dd>
                                 <dt>Pledge</dt>
-                                <dd>500,000 ₳</dd>
+                                <dd>550,000 ₳</dd>
                             </dl>
                             <a href="https://testnets.cardano.org/en/shelley/tools/staking-calculator/" target="_blank"
                                 class="btn btn-reverse btn-arrow">
@@ -323,14 +327,15 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Extremely <strong>competitive variable fee at 3%</strong>. Have 1,000₳ to stake? The difference
-                                        between us and a 1% variable fee pool is only 0.94₳ after a whole year. That is
-                                        assuming they maintain uptime, security and don't cash out at the first
-                                        possible chance!
+                                        Extremely <strong>competitive variable fee at 2.8%</strong>. 
+                                        Have 1,000₳ to stake? The difference between us and a 1% variable fee pool 
+                                        is only 0.87₳ after a whole year. That is assuming they maintain uptime, security 
+                                        and don't cash out at the first possible chance!
                                     </li>
-                                    <li><strong>Lowest fixed fees</strong> as required by the protocol - 340 ₳/epoch at
-                                        the
-                                        time of writing</li>
+                                    <li>
+                                        <strong>Lowest fixed fees</strong> as required by the protocol - 340 ₳/epoch at
+                                        the time of writing
+                                    </li>
                                     <li>As competitive perfectionists we're <strong>continuously optimising</strong> our
                                         whole stack to
                                         increase block production and up-time</li>
@@ -423,21 +428,16 @@
                                     <tbody>
                                         <tr>
                                             <th>&nbsp;</th>
-                                            <th>{SAFE}stak</th>
+                                            <th>{SAFE}STAK</th>
                                             <th>Most other pools</th>
                                         </tr>
                                         <tr>
-                                            <td>Lower Fees As Pool Grows</td>
-                                            <td><i class="fa fa-check  text-success"></i></td>
-                                            <td><i class="fa fa-times "></i></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Active/Passive Block Producers for Resiliency</td>
-                                            <td><i class="fa fa-check  text-success"></i></td>
-                                            <td><i class="fa fa-times "></i></td>
-                                        </tr>
-                                        <tr>
                                             <td>Advanced DDoS Monitoring and Protection</td>
+                                            <td><i class="fa fa-check  text-success"></i></td>
+                                            <td><i class="fa fa-times "></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Multiple Data Center Redundancy</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
@@ -447,15 +447,25 @@
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Open-sourced Full Tech Stack</td>
+                                            <td>Active Community Member in Assisting Others</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Multiple Data Center Redundancy</td>
+                                            <td>Active/Passive Block Producers for Resiliency</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
+                                        <tr>
+                                            <td>Highly Specced Infrastructure and Networking</td>
+                                            <td><i class="fa fa-check  text-success"></i></td>
+                                            <td><i class="fa fa-times "></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Open-sourced our Full Tech Stack</td>
+                                            <td><i class="fa fa-check  text-success"></i></td>
+                                            <td><i class="fa fa-times "></i></td>
+                                        </tr>                                        
                                     </tbody>
                                 </table>
                             </div>
@@ -526,8 +536,8 @@
                 <li class="footer-link telegram" style="display:none">
                     <a aria-label="SafeStak on Telegram" title="SafeStak on Telegram" href="https://t.me/SafeStak"
                         target="_blank" rel="noopener noreferrer">
-                        <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 496 512" height="1.1em"
-                            width="1.1em" xmlns="http://www.w3.org/2000/svg">
+                        <svg stroke="#DFE6DE" fill="#DFE6DE" stroke-width="0" viewBox="0 0 496 512" height="1.8em"
+                            width="1.8em" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm121.8 169.9l-40.7 191.8c-3 13.6-11.1 16.9-22.4 10.5l-62-45.7-29.9 28.8c-3.3 3.3-6.1 6.1-12.5 6.1l4.4-63.1 114.9-103.8c5-4.4-1.1-6.9-7.7-2.5l-142 89.4-61.2-19.1c-13.3-4.2-13.6-13.3 2.8-19.7l239.1-92.2c11.1-4 20.8 2.7 17.2 19.5z">
                             </path>
@@ -536,8 +546,8 @@
                 <li class="footer-link twitter">
                     <a aria-label="SafeStak on Twitter" title="SafeStak on Twitter" href="https://twitter.com/SafeStak"
                         target="_blank" rel="noopener noreferrer">
-                        <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 512 512" height="1.1em"
-                            width="1.1em" xmlns="http://www.w3.org/2000/svg">
+                        <svg stroke="#DFE6DE" fill="#DFE6DE" stroke-width="0" viewBox="0 0 512 512" height="1.8em"
+                            width="1.8em" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z">
                             </path>
@@ -547,8 +557,8 @@
                 <li class="footer-link protonmail">
                     <a aria-label="SafeStak on ProtonMail" title="SafeStak on ProtonMail" href="mailto:safestak@pm.me"
                         target="_blank" rel="noopener noreferrer">
-                        <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 24 24" height="1.1em"
-                            width="1.1em" xmlns="http://www.w3.org/2000/svg">
+                        <svg stroke="#DFE6DE" fill="#DFE6DE" stroke-width="0" viewBox="0 0 24 24" height="1.8em"
+                            width="1.8em" xmlns="http://www.w3.org/2000/svg">
                             <path xmlns="http://www.w3.org/2000/svg"
                                 d="M12 20.352s-1.096-.108-1.955-.705c-.86-.596-6.58-4.688-6.58-4.688v8.098S3.513 24 4.55 24h14.9c1.036 0 1.085-.942 1.085-.942v-8.1s-5.723 4.092-6.58 4.69c-.86.595-1.955.704-1.955.704zM12 .002S4.925-.23 3.465 7.624v5.35s.06.572 1.67 1.735c1.607 1.162 5.773 4.436 6.867 4.436 1.088 0 5.254-3.273 6.865-4.437 1.607-1.164 1.668-1.737 1.668-1.737v-5.35C19.075-.228 12 .004 12 .004zm4.846 10.536h-9.69V7.624C8.14 3.724 12 3.67 12 3.67s3.863.054 4.846 3.954v2.914z" />
                         </svg>
@@ -557,8 +567,8 @@
                 <li class="footer-link github">
                     <a aria-label="SafeStak on GitHub" title="SafeStak on GitHub" href="https://github.com/SafeStak"
                         target="_blank" rel="noopener noreferrer">
-                        <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 24 24" height="1.1em"
-                            width="1.1em" xmlns="http://www.w3.org/2000/svg">
+                        <svg stroke="#DFE6DE" fill="#DFE6DE" stroke-width="0" viewBox="0 0 24 24" height="1.8em"
+                            width="1.8em" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12">
                             </path>
