Logos and updated dates on site

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
     <footer>
         <div class='footer-content'>
-            2020 SafeStak
+            2019-2022 {SAFE}STAK
             <ul class="footer-links" style='display:block;float:left;'>
                 <li class="footer-link telegram" style="display:none">
                     <a aria-label="SafeStak on Telegram" title="SafeStak on Telegram" href="https://t.me/SafeStak"
